<resources>
  <string name="app_name">Starling 1p Challenge</string>
  <string name="title_home">Home</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Settings</string>
  <string name="starling_1p_savings_challenge">Starling 1p Savings Challenge</string>
  <string name="day_x_of_365">Day %1$s of 365</string>
  <string name="txt_savingsGoal_balance">Balance:</string>
  <string name="txt_savingsGoal_target">Target:</string>
  <string name="txt_savingsGoal_percent">Percent:</string>
  <string name="txt_savingsGoal_dummyAmount">00000.00</string>
  <string name="txt_transactiondate">Date:</string>
  <string name="txt_transaction_dummyAmount">00000.00</string>
  <string name="txt_savingsGoal_savedPercent">%1$d%%</string>
  <string name="txt_savingsgoalname">Savings Goal Name</string>
  <string name="currency_symbol">£</string>
  <string name="currency_decimalSeparator">,</string>
  <string name="txt_balancetotal">Balance Total</string>
  <string name="title_transactions">Transactions</string>
  <string name="btn_roundup">Roundup £</string>
</resources>