<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:card_view="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <!-- A CardView that contains a TextView -->
  <androidx.cardview.widget.CardView
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <TextView
        android:id="@+id/txt_savingsGoalName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:text="@string/txt_savingsgoalname"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <TextView
        android:id="@+id/txt_savingsGoalBalance_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_savingsGoal_balance"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@id/txt_savingsGoalTarget_label"
        app:layout_constraintTop_toTopOf="@id/txt_savingsGoalBalance" />

      <TextView
        android:id="@+id/txt_savingsGoalTarget_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/txt_savingsGoal_target"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@id/txt_savingsGoalName"
        app:layout_constraintTop_toTopOf="@id/txt_savingsGoalTarget" />

      <TextView
        android:id="@+id/txt_savingsGoalPercent_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/txt_savingsGoal_percent"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/txt_savingsGoalTarget_label"
        app:layout_constraintTop_toTopOf="@id/txt_savingsGoalPercentage" />

      <org.fabiomsr.moneytextview.MoneyTextView
        android:id="@+id/txt_savingsGoalBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/txt_savingsGoal_dummyAmount"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:baseTextColor="@color/white"
        app:decimalDigitsTextSize="14sp"
        app:decimalSeparator="@string/currency_decimalSeparator"
        app:layout_constraintEnd_toEndOf="@id/txt_savingsGoalTarget"
        app:layout_constraintTop_toTopOf="@id/txt_savingsGoalName"
        app:symbol="@string/currency_symbol" />

      <org.fabiomsr.moneytextview.MoneyTextView
        android:id="@+id/txt_savingsGoalTarget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:fontFamily="monospace"
        android:text="@string/txt_savingsGoal_dummyAmount"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:baseTextColor="@color/white"
        app:decimalDigitsTextSize="14sp"
        app:decimalSeparator="@string/currency_decimalSeparator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_savingsGoalBalance"
        app:symbol="@string/currency_symbol" />

      <TextView
        android:id="@+id/txt_savingsGoalPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/txt_savingsGoal_savedPercent"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/txt_savingsGoalTarget"
        app:layout_constraintTop_toBottomOf="@id/txt_savingsGoalTarget" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.cardview.widget.CardView>

</LinearLayout>